--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/jpeg" href="src/assets/mgi_logo.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <title>Question Paper Generator</title>
+    <!-- index.html CDN (optional) -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   </head>
   <body>
     <div id="root"></div>
