--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/jpeg" href="src/assets/mgi_logo.jpg" />
+    <link rel="icon" type="image/jpeg" href="public/DD_Logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>Question Paper Generator</title>
