--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
 
     <title>Question Paper Generator</title>
     <!-- index.html CDN (optional) -->
+    <style>
+      body {
+        background: linear-gradient(
+          90deg,
+          #3b0b88 0%,
+          #b685e4 30%,
+          #bd0c64 100%
+        ) !important;
+      }
+    </style>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   </head>
   <body>
